force-app/main/default/objects/Sales_Invoice_Item__c/Sales_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice Item</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Sales Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>