force-app/main/default/objects/Sales_Invoice_Item__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <formula>Stock__r.Batch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch No.</label>
    <type>Text</type>
</CustomField>