force-app/main/default/objects/Sales_Invoice_Item__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <formula>TEXT( Sales_Invoice__r.Customer__r.CustomerType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerType</label>
    <type>Text</type>
</CustomField>