force-app/main/default/objects/Sales_Invoice_Item__c/fields/Fifo__c.field-meta.xml
<CustomField>
    <fullName>Fifo__c</fullName>
    <formula>IF( Sales_Invoice__r.Customer__r.Don_t_Apply_FIFO__c , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fifo</label>
    <type>Checkbox</type>
</CustomField>