force-app/main/default/objects/Sales_Invoice_Item__c/fields/Fixed_Price_Item__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Item__c</fullName>
    <formula>IF( ISPICKVAL(Product__r.Fixed_Price_Item__c, &apos;Y&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Price Item</label>
    <type>Checkbox</type>
</CustomField>