force-app/main/default/objects/Sales_Invoice_Item__c/fields/GST_applicable_formula__c.field-meta.xml
<CustomField>
    <fullName>GST_applicable_formula__c</fullName>
    <formula>Sales_Invoice__r.Customer__r.GST_applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST applicable_formula</label>
    <type>Checkbox</type>
</CustomField>