force-app/main/default/objects/Sales_Invoice_Item__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <formula>Stock__r.GST_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>