force-app/main/default/objects/Sales_Invoice_Item__c/fields/Inv_Line_Items_Id__c.field-meta.xml
<CustomField>
    <fullName>Inv_Line_Items_Id__c</fullName>
    <displayFormat>ITEM-{0000}</displayFormat>
    <label>Invoice Line Items Id</label>
    <type>AutoNumber</type>
</CustomField>