force-app/main/default/objects/Sales_Invoice_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <formula>Stock__r.Product__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Code</label>
    <type>Text</type>
</CustomField>