force-app/main/default/objects/Sales_Invoice_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sales Invoice Items</relationshipLabel>
    <relationshipName>Sales_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>