force-app/main/default/objects/Sales_Invoice_Item__c/fields/Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount__c</fullName>
    <label>Product Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>