force-app/main/default/objects/Sales_Invoice_Item__c/fields/SalesOrderPresent__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderPresent__c</fullName>
    <formula>if( Sales_Invoice__r.Sales_Order__c != null,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesOrderPresent</label>
    <type>Checkbox</type>
</CustomField>