force-app/main/default/objects/Sales_Invoice_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Sales Invoice Items</relationshipLabel>
    <relationshipName>Sales_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>