force-app/main/default/objects/Sales_Invoice_Item__c/fields/Stock_Ids__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ids__c</fullName>
    <label>Stock Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>