force-app/main/default/objects/Sales_Invoice_Item__c/fields/Stock_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Stock_Numbers__c</fullName>
    <label>Stock Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>