force-app/main/default/objects/Sales_Invoice_Item__c/fields/Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price__c</fullName>
    <formula>Stock__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>