force-app/main/default/objects/Sales_Invoice_Item__c/fields/Total_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Before_Tax__c</fullName>
    <label>Total Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>