force-app/main/default/objects/Sales_Invoice_Item__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>if(Rate__c !=null,(Cash_Discount__c + Product_Discount__c), 
			((if(Sales_Invoice__r.Customer__r.Cash_Discount__c ==null,Sales_Invoice__r.Customer__r.Cash_Discount__c,Sales_Invoice__r.Customer__r.Cash_Discount__c)*100) + Product__r.Discount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>