force-app/main/default/objects/Sales_Invoice_Item__c/fields/UnitPriceWithDiscount__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceWithDiscount__c</fullName>
    <formula>Customer_Discount__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnitPriceWithDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>