force-app/main/default/objects/Sales_Invoice_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total__c</columns>
    <columns>Total_after_discount__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Stock__c</columns>
    <columns>Stock_Numbers__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fifo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>